RESOLVED FIXED312958
AX: aria-relevant="text" not handled properly when setting/replacing text
https://bugs.webkit.org/show_bug.cgi?id=312958
Summary AX: aria-relevant="text" not handled properly when setting/replacing text
Joshua Hoffman
Reported 2026-04-21 21:16:02 PDT
Attachments
Joshua Hoffman
Comment 1 2026-04-21 21:24:49 PDT
EWS
Comment 2 2026-04-22 09:39:11 PDT
Committed 311778@main (10a8504cca5e): <https://commits.webkit.org/311778@main> Reviewed commits have been landed. Closing PR #63294 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.