AX: aria-relevant="text" not handled properly when setting/replacing text https://bugs.webkit.org/show_bug.cgi?id=312958 rdar://165656891

Reviewed by Tyler Wilcock.

When text is replaced/set using APIs like innerText/textContent, the node can get regenerated, leading
to a new accessibility object being created. This causes those nodes to be considered "additions". In
the previous logic, that meant those elements wouldn't be announced for aria-relevant=text regions.

The fix for this is to consider additions that are text content to be text changes. If aria-relevant=
additions, this supersedes this and includes all content.

Test: accessibility/mac/live-regions/live-region-relevant-text-non-atomic.html

* LayoutTests/accessibility/mac/live-regions/live-region-relevant-text-non-atomic-expected.txt: Added.
* LayoutTests/accessibility/mac/live-regions/live-region-relevant-text-non-atomic.html: Added.
* Source/WebCore/accessibility/AXAnnouncementTypes.h:
* Source/WebCore/accessibility/AXLiveRegionManager.cpp:
(WebCore::AXLiveRegionManager::buildLiveRegionSnapshot const):
(WebCore::AXLiveRegionManager::computeAnnouncement const):

Canonical link: https://commits.webkit.org/311778@main